# HiveFX

./: README.md  settings.gradle.kts
System_Test001_FramePlaying/: build.gradle.kts
System_Test001_FramePlaying/src/main/: AndroidManifest.xml
System_Test001_FramePlaying/src/main/assets/configs/: BasicFramePlayerConfig.json
System_Test001_FramePlaying/src/main/assets/shaders/: sequenceTexturePlayer.vert  singleTexturePlayer.frag
System_Test001_FramePlaying/src/main/cpp/: Renderer.cpp
System_Test001_FramePlaying/src/main/cpp/Renderers/: TestSequencePlayerRenderer.cpp  TestSequencePlayerRenderer.h
System_Test001_FramePlaying/src/main/java/com/hive/system_test001_frameplaying/: MainActivity.java
System_Test001_FramePlaying/src/main/res/drawable/: video_seek_bar_bg.xml  video_seek_bar_thumb.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/Textures/BigRainASTC/: frame_001.astc  frame_002.astc  frame_003.astc  frame_004.astc  frame_005.astc  frame_006.astc  frame_007.astc  frame_008.astc  frame_009.astc  frame_010.astc  frame_011.astc  frame_012.astc  frame_013.astc  frame_014.astc  frame_015.astc  frame_016.astc  frame_017.astc  frame_018.astc  frame_019.astc  frame_020.astc  frame_021.astc  frame_022.astc  frame_023.astc  frame_024.astc  frame_025.astc  frame_026.astc  frame_027.astc  frame_028.astc  frame_029.astc  frame_030.astc  frame_031.astc  frame_032.astc  frame_033.astc  frame_034.astc  frame_035.astc  frame_036.astc  frame_037.astc  frame_038.astc  frame_039.astc  frame_040.astc  (+24 more)
app/src/main/assets/configs/: BasicFramePlayerConfig.json
app/src/main/assets/shaders/: sequenceTexturePlayer.frag  sequenceTexturePlayer.vert
app/src/main/cpp/: AsyncSequenceFramePlayer.cpp  AsyncSequenceFramePlayer.h  AsyncSequenceFrameRenderer.cpp  AsyncSequenceFrameRenderer.h  BillBoardManager.cpp  CMakeLists.txt  CloudRendererBillBoard.cpp  CloudRendererBillBoard.h  Common.h  RainFrameRendererAsync.cpp  RainFrameRendererAsync.h  Renderer.cpp  Renderer.h  ScreenQuad.cpp  ScreenQuad.h  SequenceFramePlayer.cpp  SequenceFramePlayer.h  SequenceFrameRenderer.cpp  SequenceFrameRenderer.h  SequencePlayerManager.cpp  SequencePlayerManager.h  ShaderProgram.cpp  ShaderProgram.h  ShaderSource.h  SingleTexturePlayer.cpp  SingleTexturePlayer.h  SnowFrameRenderer.cpp  SnowFrameRenderer.h  Texture2D.cpp  Texture2D.h  TextureAsset.cpp  TextureAsset.h  conanfile.txt  generateConanPkg.bat  main.cpp  pch.h  stb_image.h
app/src/main/cpp/Renderers/: CloudRendererBillBoard.cpp  CloudRendererBillBoard.h  RainRenderer.cpp  RainRenderer.h  RainRendererAsync.cpp  RainRendererAsync.h  SnowRenderer.cpp  SnowRenderer.h  SnowRendererAsync.cpp  SnowRendererAsync.h  SnowSceneRenderer.cpp  SnowSceneRenderer.h  SnowSceneRendererAsync.cpp  SnowSceneRendererAsync.h
app/src/main/res/drawable/: button_border.xml
app/src/main/res/layout/: activity_game.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle.kts
mylibrary/src/main/assets/shaders/: blendAlpha.frag  blendLighterColor.frag  blendMultiply.frag  blitTex2Screen.frag  blitTex2Screen.vert  slideWindow.vert  slideWindowV.frag
mylibrary/src/main/cpp/: AsyncSequenceFramePlayer.cpp  AsyncSequenceFramePlayer.h  BillBoardManager.cpp  BillBoardManager.h  CMakeLists.txt  CMakeUserPresets.json  Common.h  EnumReflect.cpp  EnumReflect.h  JsonReader.cpp  JsonReader.h  SequenceFramePlayer.cpp  SequenceFramePlayer.h  ShaderProgram.cpp  ShaderProgram.h  SingleTexturePlayer.cpp  SlideWindow.cpp  SlideWindow.h  SnowStylizer.cpp  SnowStylizer.h  Texture2D.cpp  Texture2D.h  TextureBlender.cpp  TextureBlender.h  ThreadPool.h  TimeUtils.cpp  TimeUtils.h
mylibrary/src/main/cpp/opencv-mobile/sdk/native/jni/: OpenCVModules_arm64_v8a.cmake  OpenCVModules_armeabi_v7a.cmake  OpenCVModules_x86.cmake  OpenCVModules_x86_64.cmake
mylibrary/src/main/cpp/opencv-mobile/sdk/native/jni/include/opencv2/core/: core.hpp
system_test001_frameplaying/src/main/cpp/: CMakeLists.txt  Renderer.h  conan_android_toolchain.cmake  system_test001_frameplaying.cpp
system_test001_frameplaying/src/main/res/layout/: activity_game.xml
system_test001_frameplaying/src/main/res/values/: strings.xml
system_test002_slidewindow/: build.gradle.kts
system_test002_slidewindow/src/main/: AndroidManifest.xml
system_test002_slidewindow/src/main/assets/configs/: SlideWindowConfig.json
system_test002_slidewindow/src/main/assets/shaders/: SlideWindowH.frag
system_test002_slidewindow/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  system_test002_slidewindow.cpp
system_test002_slidewindow/src/main/cpp/Renderers/: TestSlideWindowRenderer.cpp  TestSlideWindowRenderer.h
system_test002_slidewindow/src/main/res/values/: strings.xml  themes.xml
system_test003_blending/: build.gradle.kts
system_test003_blending/src/main/: AndroidManifest.xml
system_test003_blending/src/main/assets/configs/: MainAppConfig.json
system_test003_blending/src/main/assets/shaders/: blendLighten.frag  blendLinearDodge.frag  blendMultiply.frag  blendOverlay.frag
system_test003_blending/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  conanfile.txt  system_test003_blending.cpp
system_test003_blending/src/main/cpp/Renderers/: FullScreenSequenceBlendRenderer.cpp  FullScreenSequenceBlendRenderer.h
system_test003_blending/src/main/res/layout/: layout.xml
system_test003_blending/src/main/res/values/: strings.xml
system_test004_snowstylization/: build.gradle.kts
system_test004_snowstylization/src/main/: AndroidManifest.xml
system_test004_snowstylization/src/main/assets/configs/: SnowStylizeConfig.json
system_test004_snowstylization/src/main/assets/shaders/: sequenceTexturePlayer.frag
system_test004_snowstylization/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h
system_test004_snowstylization/src/main/res/values/: strings.xml  themes.xml
system_test004_snowstylization/src/main/res/values-night/: themes.xml
(+18 files in other folders)
